--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,8 @@
         "sequelize": "^6.31.1",
         "session-file-store": "^1.5.0",
         "socket.io": "^4.6.0",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^4.6.3",
         "sweetalert2": "^11.7.2",
         "winston": "^3.9.0"
     },
