--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,10 @@
     "type": "module",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon src/index.js"
+        "dev": "nodemon src/index.js",
+        "test": "mocha test/users.test.js",
+        "testchai": "mocha test/usersChai.test.js",
+        "testsuper": "mocha test/supertest.test.js"
     },
     "keywords": [],
     "dependencies": {
@@ -16,6 +19,7 @@
         "connect-mongo": "^5.0.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "date-fns": "^2.30.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-compression": "^1.0.2",
@@ -43,6 +47,9 @@
     },
     "devDependencies": {
         "@faker-js/faker": "^8.0.2",
-        "nodemon": "^2.0.20"
+        "chai": "^4.3.7",
+        "mocha": "^10.2.0",
+        "nodemon": "^2.0.20",
+        "supertest": "^6.3.3"
     }
 }
