--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "nodemon src/index.js",
+        "start": "node src/index.js",
         "test": "mocha test/users.test.js",
         "testchai": "mocha test/usersChai.test.js",
         "testsuper": "mocha test/supertest.test.js"
@@ -26,6 +27,7 @@
         "express-handlebars": "^6.0.7",
         "express-session": "^1.17.3",
         "jsonwebtoken": "^9.0.0",
+        "moment": "^2.29.4",
         "mongoose": "^7.0.1",
         "mongoose-paginate-v2": "^1.7.1",
         "multer": "^1.4.5-lts.1",
